--- a/Html/index.html
+++ b/Html/index.html
@@ -413,6 +413,24 @@ Special Thanks To Owner of <strong> Khel Ko Kura </strong>
         </form>
     </div>
 </section>
+<script type="text/javascript">
+    (function (l) {
+      if (l.search[1] === "/") {
+        var decoded = l.search
+          .slice(1)
+          .split("&")
+          .map(function (s) {
+            return s.replace(/~and~/g, "&");
+          })
+          .join("?");
+        window.history.replaceState(
+          null,
+          null,
+          l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    })(window.location);
+  </script>
 
 <footer class="footer">
     <p>&copy; 2022 Ritik Dhital. All rights reserved.</p>
