--- a/Html/index.html
+++ b/Html/index.html
@@ -245,14 +245,14 @@ Special Thanks To Owner of <strong> Khel Ko Kura </strong>
                 <p>Photoshop thumbnail showing the entertainment blogging in Dharan By Khemey Vlogs.</p>
             </div>
             <div class="project">
-                <img src="img\Client 103 Thumbnail.jpg" alt="Project 2">
+                <img src="C:\Users\rijan\Desktop\Portfolio\Gita Didi Vlog Final 1.jpg" alt="Project 2">
                 <h3>Project 2</h3>
-                <p>A vibrant Photoshop thumbnail celebrating the New Year with festive colors, fireworks, and joyful vibes.</p>
+                <p>A vibrant Photoshop thumbnail for Footballer Gita Rana Magar Vlog.. Generated Over 100K+ views.</p>
   </div>
  <div class="project">
-                <img src="img\Gharmai Zoo 2.jpg" alt="Project 3">
+                <img src="C:\Users\rijan\Desktop\Portfolio\Picnic.jpg" alt="Project 3">
                 <h3>Project 3</h3>
-                <p>A Photoshop designed Thumbnail For Khemey Vlogs</p>
+                <p>A Photoshop designed Thumbnail For Mr Histry Rl Vlog</p>
   </div>
 <div class="projects">
             <div class="project">
@@ -266,9 +266,9 @@ Special Thanks To Owner of <strong> Khel Ko Kura </strong>
                 <p>A vibrant Photoshop thumbnail for Kaji Ji related to cricket live stream.</p>
   </div>
  <div class="project">
-                <img src="img\Sidhhant Daju Accident.jpg" alt="Project 6">
+                <img src="C:\Users\rijan\Desktop\Portfolio\Total Money Collection.jpg" alt="Project 6">
                 <h3>Project 6</h3>
-                <p>A challenging themed thumbnail designed in Photoshop, Showcasing the reality of Sidhhant Acciddent.</p>
+                <p>A thumbnail for Santosh Tamang Vlog, Showcasing the Total Money Collection for New House of Gita Dd</p>
   </div>
 
 
@@ -436,4 +436,5 @@ Special Thanks To Owner of <strong> Khel Ko Kura </strong>
     <p>&copy; 2022 Ritik Dhital. All rights reserved.</p>
 </footer>
 </body>
+
 </html>
